Otimizações gerais + Whatsapp Button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
 
+  <script type="application/javascript" src="https://cdn.wts.chat/scripts/widget/v2/h-widget-min.js"
+    data-companyid="9f5a28c3-52d3-46d1-964b-de866108d1fe" data-widgetid="cdaf6a9e-04c5-4d62-9cb3-c4c5a5029f06"></script>
+
 </head>
 
 <body>
